--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                         </p>
                         <p class="text-danger mt-4">Follow Me -
                             <i class="fa-brands fa-instagram fa-xl ms-4" style="color: #a3a3a3;"></i>
-                            <i class="fa-regular fa-envelope fa-xl ms-4" style="color: #a3a3a3;"></i>
+                            <a href="mailto:"><i class="fa-regular fa-envelope fa-xl ms-4" style="color: #a3a3a3;"></i>
+                            </a>
                             <i class="fa-brands fa-whatsapp fa-xl ms-4" style="color: #a3a3a3;"></i>
                         </p>
                     </div>
