--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         GRAPHIC
                         DESIGNER</span>
                 </h4>
-                <a class="btn btn-danger  mt-4 me-2 rounded-4 px-3 py-2" href="Resume.pdf" target="_blank">
+                <a class="btn btn-danger  mt-4 me-2 rounded-4 px-3 py-2" href="resume.png" target="_blank">
                     Print Resume</a><a class="btn btn-danger  mt-4 ms-2 rounded-4 px-3 py-2" href="#portfolio">
                     portfolio</a>
 
